lab8/github-egress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: github-egress
spec:
  selector:
    istio: egressgateway
  servers:
  - hosts:
      - github.com
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
